article page view, admin page started

--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -10,8 +10,8 @@
     <header>
       <span class="header-title">Blogging workspace</span>
       <div class="header-menu">
-        <span class="current-status">You’re a guest now</span>
-        <button>Login as admin</button>
+        <span class="current-status">You’re an admin now</span>
+        <button>Logout to guest</button>
       </div>
     </header>
     <div class="content">
@@ -38,7 +38,8 @@
         <div class="article">
           <span class="article-title">My first article</span>
           <div class="side-article-con">
-            <span class="date">13.01.2026</span>
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
           </div>
         </div>
       </div>
