--- a/frontend/html/admin.html
+++ b/frontend/html/admin.html
@@ -4,14 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Articles</title>
-    <link rel="stylesheet" href="/css/articles.css" />
+    <link rel="stylesheet" href="/css/admin.css" />
   </head>
   <body>
+    <div class="overlay">
+      <div class="add-article-con">
+        <button class="close-btn">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="48px"
+            viewBox="0 -960 960 960"
+            width="48px"
+            fill="#BE757C"
+          >
+            <path
+              d="m249-207-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"
+            />
+          </svg>
+        </button>
+        <div class="title">Add new</div>
+        <form action="">
+          <input type="text" class="field" placeholder="Title" />
+          <input
+            type="date"
+            class="field"
+            placeholder="Date"
+          /><!--  TODO: Сделать так, чтобы в качестве value была текущая дата -->
+          <textarea class="field" name="" id="" placeholder="Text"></textarea>
+          <input type="submit" value="Publish" />
+        </form>
+      </div>
+    </div>
     <header>
       <span class="header-title">Blogging workspace</span>
       <div class="header-menu">
         <span class="current-status">You’re an admin now</span>
-        <button>Logout to guest</button>
+        <a href="./articles.html">Logout to guest</a>
       </div>
     </header>
     <div class="content">
@@ -42,7 +70,120 @@
             <button class="action-text">Delete</button>
           </div>
         </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
+        <div class="article">
+          <span class="article-title">My first article</span>
+          <div class="side-article-con">
+            <button class="action-text">Edit</button>
+            <button class="action-text">Delete</button>
+          </div>
+        </div>
       </div>
+      <button class="add-btn">+ Add</button>
     </div>
   </body>
 </html>
