--- a/frontend/html/articles.html
+++ b/frontend/html/articles.html
@@ -11,7 +11,7 @@
       <span class="header-title">Blogging workspace</span>
       <div class="header-menu">
         <span class="current-status">You’re a guest now</span>
-        <button>Login as admin</button>
+        <a href="./login.html">Login as admin</a>
       </div>
     </header>
     <div class="content">
